# io-calendar

./: .cliffignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  flake.nix
.github/workflows/: tests.yml
examples/: std-caldav-discovery.rs
src/: calendar.rs  client.rs  item.rs  lib.rs
src/caldav/: config.rs  mod.rs  request.rs  response.rs
src/caldav/coroutines/: calendar-home-set.rs  create-calendar.rs  create-item.rs  create-item.vcf  current-user-principal.rs  delete-calendar.rs  delete-item.rs  follow-redirects.rs  list-calendars.rs  list-calendars.xml  list-items.rs  list-items.xml  mod.rs  read-item.rs  send.rs  update-calendar.rs  update-item.rs  well-known.rs
src/calendar/: mod.rs  types.rs
src/calendar/vdir/: create.rs  delete.rs  list.rs  mod.rs  update.rs
src/calendar/webdav/: create.rs  delete.rs  list.rs  mod.rs  update.rs
src/item/: mod.rs  types.rs
src/item/vdir/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/item/webdav/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/vdir/: client.rs  config.rs  convert.rs  mod.rs
src/vdir/coroutines/: create-calendar.rs  create-card.rs  create-item.rs  delete-calendar.rs  delete-item.rs  list-calendars.rs  list-items.rs  mod.rs  read-item.rs  update-calendar.rs  update-item.rs
src/webdav/: client.rs  convert.rs  mod.rs
tests/: std-caldav.rs  std-vdir.rs
