[package]
name = "io-calendar"
description = "Set of I/O-free coroutines to manage calendars"
version = "0.0.1"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["api-bindings"]
keywords = ["io-free", "coroutine", "runtime", "calendar", "ical"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-calendar/latest/io_calendar"
repository = "https://github.com/pimalaya/io-calendar"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
caldav = ["dep:base64", "dep:http", "dep:io-http", "dep:memchr", "dep:quick-xml", "dep:secrecy", "dep:io-stream"]
vdir = ["dep:io-fs", "dep:io-vdir"]

[dev-dependencies]
env_logger = "0.11"
io-fs = { version = "0.0.1", default-features = false, features = ["std"] }
io-stream = { version = "0.0.2", default-features = false, features = ["std"] }
pimalaya-toolbox = { version = "0.0.2", default-features = false, features = ["config", "stream", "rustls-ring"] }
tempdir = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[dependencies]
base64 = { version = "0.22", optional = true }
calcard = "0.1"
chrono = { version = "0.4", optional = true }
http = { version = "1.3", optional = true }
io-fs = { version = "0.0.1", default-features = false, optional = true }
io-http = { version = "0.0.3", default-features = false, optional = true }
io-stream = { version = "0.0.2", default-features = false, optional = true }
io-vdir = { version = "0.0.1", default-features = false, optional = true }
log = "0.4"
memchr = { version = "2.7", optional = true }
quick-xml = { version = "0.37", features = ["serialize"], optional = true }
secrecy = { version = "0.10", optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[patch.crates-io]
io-vdir.path = "../vdir"
