[package]
name = "io-calendar"
description = "Calendar client library"
version = "0.0.3"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2024"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
categories = ["api-bindings"]
keywords = ["io-free", "coroutine", "calendar", "ical", "caldav"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-calendar/latest/io_calendar"
repository = "https://github.com/pimalaya/io-calendar"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rustls-ring", "webdav", "vdir", "serde", "parser"]
client = []
vdir = ["dep:io-vdir", "io-vdir/client", "dep:getrandom"]
webdav = ["dep:io-webdav", "dep:getrandom", "dep:url", "io-webdav/client"]
serde = ["dep:serde"]
parser = ["dep:calcard"]
rustls-ring = ["client", "io-webdav?/rustls-ring"]
rustls-aws = ["client", "io-webdav?/rustls-aws"]
native-tls = ["client", "io-webdav?/native-tls"]
vendored = ["io-webdav?/vendored"]

[dev-dependencies]
env_logger = "0.11"
tempfile = "3.23"

[dependencies]
calcard = { version = "0.3", default-features = false, optional = true }
chrono = { version = "0.4", default-features = false, optional = true }
getrandom = { version = "0.4", optional = true }
io-vdir = { version = "0.0.3", default-features = false, optional = true }
io-webdav = { version = "0.0.1", default-features = false, optional = true }
log = { version = "0.4", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
thiserror = { version = "2", default-features = false }
url = { version = "2.5", default-features = false, optional = true }

[patch.crates-io]
io-http.git = "https://github.com/pimalaya/io-http"
io-vdir.git = "https://github.com/pimalaya/io-vdir"
io-webdav.git = "https://github.com/pimalaya/io-webdav"
